--- a/index.html
+++ b/index.html
@@ -1938,10 +1938,11 @@
                         response = `
                             <div class="pl-4 mt-2 mb-4">
                                 <div class="text-gray-300">Contact Information:</div>
-                                <div class="text-gray-300 pl-4">- Email: bhargava@securityexpert.com</div>
+                                <div class="text-gray-300 pl-4">- Email: bhargavagk2@gmail.com.com</div>
+                                <div class="text-gray-300 pl-4">- Ph.No: 8123240315</div>
                                 <div class="text-gray-300 pl-4">- Location: Bangalore, India</div>
-                                <div class="text-gray-300 pl-4">- GitHub: github.com/bhargavagk</div>
-                                <div class="text-gray-300 pl-4">- LinkedIn: linkedin.com/in/bhargavagk</div>
+                                <div class="text-gray-300 pl-4">- GitHub: https://github.com/barghava</div>
+                                <div class="text-gray-300 pl-4">- LinkedIn: www.linkedin.com/in/bhargava-gk-367052286</div>
                             </div>
                         `;
                         break;
